# xml-parser-cpp

./: .gitignore  CMakeLists.txt  New.xml  README.md  compressed.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Sample of Modified/: modified_XML.xml
docs/: docs.md
formatting XML using py/: format.py  identation for XML.py
formatting XML.cpp/: Formating_New.cbp  Formating_New.layout  Formatting the XML file.cpp  New.xml  main  main.cpp
inc/: compression.h  functions.h  main.h  str_count.h
src/: Parser.cpp  TreeNode.cpp  XML_to_Tree.cpp  compression.cpp  formating.cpp  functions.cpp  main.cpp  mm.cpp  str_count.cpp
src/console/: main.cpp  main.h
src/core/analysis/: analysis.cpp  analysis.h
src/core/compression/: compression.cpp  compression.h
src/core/consistancy/: XMLConsistancy.h  consistency.h
src/core/consistency/: consistency.h  functions.cpp
src/core/convert/: Conversion_Function.cpp  Parser.cpp  XML_To_Tree2.h  tree_to_json.h
src/core/data/: Post.cpp  Post.h  User.cpp  User.h
src/core/format/: formating.cpp  formatting.h
src/core/fromat/: format.cpp  format.h
src/core/graph/: DynamicArray.cpp  DynamicArray.h  FileExportGraphVisualization.h  Graph.cpp  Graph.h  GraphVisualizationSocialNetworkVisitor.h  SocialNetwork.cpp  SocialNetwork.h  SocialNetworkVisitor.h  hashtable.h
src/core/hashtable/: hashtable.h
src/core/tree/: TreeNode.cpp  XML_to_Tree.cpp  tree.h
src/gui/: QImageGraphVisualization.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
test/: consistency.cpp  copy_me.cpp  custom_sn.xml  data_extraction.cpp  graphs_and_dynamic_arrays.cpp  out.txt  sample.txt  social_network.cpp  test.txt  user_test.cpp  xml_compression.cpp  xml_consistency.cpp  xml_to_json.cpp  xml_to_tree.cpp
